# zero2prodrs

./: Cargo.toml  configuration.yaml
.github/workflows/: general.yml
migrations/: 20240531092908_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/routes/: health_check.rs  mod.rs  subscriptions.rs
tests/: health_check.rs
